css/local.sass
---
---

/* Media query widths */
$screen-sm-max: 767px
$screen-mid-min: 768px
$screen-mid-max: 991px

a.exec
  font-size: 1.0em
  color: #1b1b1b

iframe.live-docs
  border: none
  margin-top: 5px

.tooltip
  font-size: 10px !important

.fa-external-link
  margin-left: 4px
  opacity: 0.75
  font-size: 0.80em

.navbar
  input.search
    width: 200px
  .dropdown-header
    display: block
    padding: 6px 20px 0
    font-size: 12px
    line-height: 1.7em
    color: #888
    margin-top: 6px
    &:not(:first-child)
      border-top: 1px solid #f1f1f1
  .dropdown-menu
    -webkit-user-select: none
    -moz-user-select: none
    -ms-user-select: none
    user-select: none
    cursor: default
    .fa-external-link
      opacity: 0.50
  .dropdown-toggle
    &:hover
      background-color: rgba(255,255,255,0.25)
    .fa-caret-down
      margin-left: 4px

@media screen and (max-width: $screen-sm-max)
  .navbar-inverse .navbar-nav .open .dropdown-menu > .dropdown-header
    border-color: #333
    color: #777

/* Force navigation bar to fit on one line at medium screen widths */
@media screen and (min-width: $screen-mid-min) and (max-width: $screen-mid-max)
  .navbar-nav
    & > li
      font-size: 1em
      & > a > .fa:not(.fa-caret-down)
        display: none

.homepage
  .content
    max-width: 100%
    padding:
      top: 30px
      left: 0
      right: 0

    .fat-header
      background: url("/img/geometric.jpg") no-repeat center fixed
      -webkit-background-size: cover
      -moz-background-size: cover
      -o-background-size: cover
      background-size: cover
      width: 100%
      height: 404px

      h1.hello-dolly
        color: white
        font-size: 8em
        padding-top: 100px

    .build-something
      margin:
        left: auto
        right: auto
      max-width: 950px
      padding:
        top: 1.5em
        bottom: 2em
      @media screen and (max-width: $screen-mid-max)
        padding:
          left: 15px
          right: 15px

      .tagline + p
        font-size: 1.2em

      .tryit-link
        font-size: 1.2em

      .trailhead
        ul.fa-ul
          margin-left: 3.5em
          i.fa
            margin-top: -0.2em

  .publishers
    border-top: 1px solid #eee
    border-bottom: 1px solid #eee
    font-size: 1.2em
    margin-top: 1em
    padding:
      top: 1em
      bottom: 1em
    .fa
      margin-top: 20px
    a
      white-space: nowrap

footer
  position: relative
  line-height: 1.7em
  min-height: 4em
  .footer-cc-logo
    position: absolute
  .footer-cc-text
    position: absolute
    left: 90px
    right: 10px
    padding-bottom: 1em

.url
  font-size: 1.5em
  font-weight: bold
  display: inline-block
  padding: 0.25em
  margin-bottom: 0.5em

  .transport
    color: #12daeb

  .domain
    color: #f513aa

  .path
    color: #ffca14

  .identifier
    color: #ff9c4e

  .extension
    color: #ffca14

.results
  position: relative
  background-color: #f9f2f4
  height: 400px
  overflow-x: hidden
  overflow-y: scroll
  width: 100%
  margin:
    left: auto
    right: auto
    bottom: 20px
  padding:
    top: 10px
    left: 10px
    right: 10px
    bottom: 10px
  border: 1px solid #cecece
  border-radius: 4px

  .request, .response
    border: none

  .request
    padding:
      top: 3px
      left: 3px
    .verb
      font-weight: bold
      color: #008080

  .remove
    position: absolute
    top: 0
    right: 0
    text-decoration: none
    color: #000
    font-size: 0.9em
    padding: 10px
    background-color: whitesmoke
    border-left: 1px solid #cecece
    border-bottom: 1px solid #cecece
    border-bottom-left-radius: 4px

  pre
    background-color: transparent   /* Overrides bootstrap for try-it code response */

.repositories
  padding-top: 10px
  padding-left: 0

  li
    list-style: none

  .repo
    position: relative
    min-height: 66px
    padding-bottom: 20px
    margin: 0 0 20px
    overflow: hidden
    font-size: 1.2em
    line-height: 1.6em
    border-top: 1px solid #eee

    .meta
      font-size: 0.8em
      padding:
        bottom: 1em

    .body
      .updated-at
        margin: 0
        font-size: 0.9em
        color: #999999

    ul.contributors
      list-style: none
      li
        display: inline-block
        padding-right: 5px
        float: right

  .buttons
    margin-top: 20px

.homepage
  .tagline
    font-size: 45px

  .jumbotron
    padding-bottom: 0px

ul.pages
  list-style: none

  .page
    h3
      font-size: 1.0em

      &.placeholder a
        color: #8a8a8a
      &.draft a
        color: #ff4756
      &.alpha a
        color: #ff7e47
      &.beta a
        color: #ff7e47
      &.final a
        color: #3ec821

    ul.meta
      list-style: none
      font-size: 0.8em

.tryit-link
  position: relative
  margin-bottom: 20px
  padding: 0.8em
  border-radius: 4px
  color: #c7254e
  background-color: #f9f2f4
  i.fa
    margin-top: 0.3em
  code
    position: relative
    top: 50%
    transform: translateY(-50%)
    background-color: transparent
  .hurl-it
    position: absolute
    right: 1em
    background-color: inherit

/* Bootstrap overrides */
h1, .h1, h2, .h2, h3, .h3
  margin-bottom: 14px

button.close
  opacity: 0.8
  color: inherit

/* common.css overrides */
p, li
  font-size: 1.1em

.sidebar-nav
  .nav-header
    color: #777

.response-codes
  ul
    padding-left: 0

    $response_codes: "good" #0074D9, "bad" #FF851B, "ugly" #FF4136
    li
      line-height: 1.2em
      list-style: none
      margin-bottom: 0.3em

      code
        color: white
        display: inline-block
        width: 50px
        text-align: center
        padding: 7px 0 4px
        -moz-border-radius: 2px
        -webkit-border-radius: 2px
        -o-border-radius: 2px
        -ms-border-radius: 2px
        -khtml-border-radius: 2px
        border-radius: 2px
        margin:
          right: 0.4em

        @each $code in $response_codes
          &.#{nth($code, 1)}
            background-color: nth($code, 2)
            border: 1px solid lighten(nth($code, 2), 20%)

#foundry-docs
  $datatypes: "text" #0074D9, "number" #39CCCC, "location" #3D9970, "calendar_date" #FF851B

  .metadata
    margin: 1em
    width: 30%

    ul
      padding-left: 0
      list-style-type: none

  .fields
    padding-left: 0

    li.field
      list-style: none
      float: none
      clear: none
      display: block
      margin: 0 0 10px
      padding: 0

      .panel-body
        border-top: none

        h4
          font-weight: bold

      .heading
        float: none
        clear: both
        overflow: hidden
        display: block
        margin: 0
        padding: 0

        @each $type in $datatypes
          &.#{nth($type, 1)}
            background-color: lighten(nth($type, 2), 40%)
            border: 1px solid lighten(nth($type, 2), 50%)
            -moz-border-radius: 2px
            -webkit-border-radius: 2px
            -o-border-radius: 2px
            -ms-border-radius: 2px
            -khtml-border-radius: 2px
            border-radius: 2px

        h3
          display: block
          clear: none
          float: left
          margin: 0
          padding: 0
          font-size: 1.0em
          line-height: 1.1em

          .field-name
            color: white
            display: inline-block
            width: 300px
            text-align: center
            padding: 7px 0 4px
            -moz-border-radius: 2px
            -webkit-border-radius: 2px
            -o-border-radius: 2px
            -ms-border-radius: 2px
            -khtml-border-radius: 2px
            border-radius: 2px

            @each $type in $datatypes
              &.#{nth($type, 1)}
                background-color: nth($type, 2)

          .datatype
            padding-left: 4px
            background: none

        .human-name
          display: block
          float: right
          margin: 6px 10px 0 0
          font-size: 1.0em
          line-height: 1.1em

.vertical-center
  position: relative
  top: 50%
  transform: translateY(-50%)

.author
  margin-bottom: 1.0em

  h3, h4
    margin-bottom: 0.1em

  hr
    margin-top: 0.2em
    margin-bottom: 0.2em

  ul.meta
    list-style: none
    padding-left: 0
    margin-top: 0.5em
    white-space: nowrap
    overflow: hidden
    text-overflow: ellipsis

